--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.1.0
+Click==7.0
+Flask==1.1.1
+Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
-Jinja2==2.11.3
+Jinja2==2.10.3
 MarkupSafe==1.1.1
-numpy==1.20.2
-pandas==1.2.4
-python-dateutil==2.8.1
-pytz==2021.1
-six==1.15.0
-Werkzeug==1.0.1
+SQLAlchemy==1.3.17
+Werkzeug==0.16.0
